preventing invisible font

--- a/style.css
+++ b/style.css
@@ -211,4 +211,5 @@ p,
             url("JetBrainsMono-Regular.woff2") format("woff"),
             url("JetBrainsMono.ttf") format("truetype");
     font-weight: normal;
+    font-display: swap;
 }
